--- a/frontend/.prettierrc.json
+++ b/frontend/.prettierrc.json
@@ -1,6 +1,12 @@
 {
-  "tabWidth": 4,
-  "singleQuote": true,
-  "trailingComma": "none",
-  "arrowParens": "avoid"
+    "tabWidth": 4,
+    "singleQuote": true,
+    "trailingComma": "none",
+    "arrowParens": "avoid",
+    "printWidth": 120,
+    "bracketSpacing": true,
+    "jsxBracketSameLine": true,
+    "jsxSingleQuote": false,
+    "semi": true,
+    "useTabs": false
 }
