--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -9,11 +9,12 @@ spring:
     hibernate:
       ddl-auto: update
 
-authentication:
+oauth2:
   facebook:
     access-token-url: https://graph.facebook.com/v9.0/oauth/access_token
     user-info-url: https://graph.facebook.com/me
     client-id: ${FACEBOOK_CLIENT_ID}
     client-secret: ${FACEBOOK_CLIENT_SECRET}
-  jwt:
+
+jwt:
     secret: ${JWT_SECRET}
