--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>java-jwt</artifactId>
             <version>3.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>20.35.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
