--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-simple-tree-menu": "^1.1.18",
+    "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^7.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
