--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-share": "^4.3.1",
     "react-simple-tree-menu": "^1.1.18",
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^7.0.3",
