--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-simple-tree-menu": "^1.1.18",
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^7.0.3",
+    "sass": "^1.32.10",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
     "typescript": "^4.0.3",
