--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -16,6 +16,7 @@ oauth2 :
   facebook :
     access-token-url : https://graph.facebook.com/v9.0/oauth/access_token
     user-info-url : https://graph.facebook.com/me
+    user-email-url : https://graph.facebook.com/
     client-id : ${FACEBOOK_CLIENT_ID}
     client-secret : ${FACEBOOK_CLIENT_SECRET}
 
